# atelier

./: README.md  index.html  memo.txt  package-lock.json  package.json  tailwind.config.js  vite.config.ts
server/: package.json
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ActiveFiltersBar.tsx  HintBar.tsx  InlineTitleEditor.tsx  Pagination.tsx  SearchBar.tsx  Sidebar.tsx  TagChip.tsx  TagPinnedRow.tsx  Topbar.tsx  listControls.ts
src/db/: client.ts  schema.ts
src/hooks/: useAllTagsQuery.ts  useAppSettings.ts  useAutoThumbnailQueueStatus.ts  useImageImportSession.ts  useImageListUrlState.ts  useImageTaggingSession.ts  useNovelListUrlState.ts  useNovelTagRanking.ts  useNovelsQuery.ts  useTagRanking.ts  useTagRankingQuery.ts  useVideoDerivedDataQueue.ts  useVideoListUrlState.ts  useVideosQuery.ts
src/pages/: registry.ts
src/pages/favorites/: FavoritesPage.tsx
src/pages/home/: HomePage.tsx
src/pages/images/: ImageDetailPage.tsx  ImageImportPage.tsx  ImageManagePage.tsx  ImageTaggingCompletedPage.tsx  ImageTaggingPage.tsx  ImageTagsPage.tsx  ImagesPage.tsx
src/pages/novels/: NovelEditorPage.tsx  NovelFavoritesPage.tsx  NovelManagePage.tsx  NovelsPage.tsx  (+2 more)
src/services/: exportImport.ts  fileSystem.ts  imageDesktopApi.ts  imageImportService.ts  imageService.ts  legacyImageExport.ts  scanner.ts  tagService.ts  tauri.ts  thumbnail.ts  videoMeta.ts
src/styles/: globals.css
src/types/: domain.ts
src/utils/: imageCompressor.ts  mounts.ts  novelParser.ts  videoDisplay.ts  videoTitle.ts
(+25 files in other folders)
